# portkey-gemini-error-example

./: .env.example  .gitignore  README.md  no_prefix.txt  prefix.txt  pyproject.toml  report.md
src/portkey_test/: crew.py  main.py
src/portkey_test/config/: agents.yaml  tasks.yaml
