[project]
name = "portkey_test"
version = "0.1.0"
description = "portkey-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "portkey-ai>=1.14.0",
]

[project.scripts]
portkey_test = "portkey_test.main:run"
run_crew = "portkey_test.main:run"
train = "portkey_test.main:train"
replay = "portkey_test.main:replay"
test = "portkey_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
